_sass/pages/scholarships.scss
.general-information-list {
  display: flex;
  flex-direction: column;
  gap: var(--sp-xxl);
  max-width: 60rem;
}

.general-information-item {
  display: grid;
  grid-template-columns: min-content auto;
  gap: var(--sp-xl);

  p {
    font-weight: 700;
  }

  svg {
    height: var(--sp-xxl);
    width: var(--sp-xxl);
  }

}

.resident-options-card {
  max-width: 60rem;
}

.resident-options {
  display: flex;
  flex-direction: row;
  gap: var(--sp-xxxxl);
  justify-content: center;
}

.resident-radio-button-label {
  display: block;
  position: relative;
  padding-left: var(--sp-xxxl);
  cursor: pointer;
  font-size: var(--fs-xxl);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 700;
  font-family: var(--ff-header);

  &:hover {
    cursor: pointer;
  }
}

#non-resident-explanation {
  height: calc(auto);
}

/* Create a custom radio button */
.resident-radio-button-checkmark {
  position: absolute;
  top: var(--sp-md);
  left: 0;
  height: var(--sp-xxl);
  width: var(--sp-xxl);
  background-color: var(--base-100);
  outline: 6px solid var(--brand);
  border-radius: 50%;
  transition: background-color 0.2s ease;
}

/* On mouse-over, add a brand background color */
.resident-radio-button-label:hover:not(.selected) .resident-radio-button-checkmark
//.resident-radio-button-label:focus .resident-radio-button-checkmark
 {
  background-color: rgba(127, 1, 13, 0.5);
}

// .resident-radio-button-label:focus {
//   border: 2px solid black;
// }

/* When the radio button is checked, add a background */
.resident-radio-button-label.checked .resident-radio-button-checkmark {
  background-color: var(--brand);
}

/* Create the indicator (the dot/circle - hidden when not checked) */
.resident-radio-button-checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

/* Style the indicator (dot/circle) */
.resident-radio-button-label .resident-radio-button-checkmark:after {
  top: 9px;
  left: 9px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: white;
}

.scholarship-options {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: var(--sp-xxl);

  @media (max-width: 1200px) {
    grid-template-columns: repeat(2, 1fr);
  }

  @media (max-width: 600px) {
    grid-template-columns: 1fr;
  }
}

.scholarship-option {
  position: relative;
  transition: all ease-in-out 0.2s;
  cursor: pointer;

  &__logo {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin-bottom: var(--sp-xl);

    svg {
      height: var(--sp-xxxl);
      width: auto;
      fill: var(--brand);
      display: flex;
      flex-direction: row;
      justify-content: center;
    }
  }
  
  &::after {
    content: "";
    display: block;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: var(--border-radius);
    box-shadow: 0 0 0 0px var(--brand);
    transition: box-shadow ease-in-out 0.2s;
  }

  &:focus-visible {
    outline-offset: 10px;
  }
}

.scholarship-option:hover:not(.disabled):not(.selected)::after {
  //outline: var(--sp-md) solid rgba(127, 1, 13, 0.5);
  box-shadow: 0 0 0 var(--sp-md) rgba(127, 1, 13, 0.5);
}

.scholarship-option.selected::after {
  //outline: var(--sp-md) solid var(--brand);
  box-shadow: 0 0 0 var(--sp-md) var(--brand);
}

.scholarship-option.disabled {
  opacity: 0.5 !important;
  cursor: default;
}

#scholarship-option--logo--occ {
  font-size: var(--sp-xxl);
  padding-bottom: var(--sp-xl);
}

.scholarship-option__criteria {
  display: flex;
  flex-direction: column;
  gap: var(--sp-xxl);

  &__item {
    display: grid;
    grid-template-columns: min-content 1fr;
    gap: var(--sp-xl);

    p {
      font-weight: 600;
    }

    svg {
      height: var(--sp-xxl);
      width: var(--sp-xxl);
    }
  }
}

#grade-range-background,
#grade-range-fill {
  width: var(--sp-xl);
  border-radius: 50px;
}

#grade-range-background {
  position: relative;
  z-index: 1;
  height: 50vh;
  background-color: var(--base-50);
  box-shadow: var(--shadow);
  margin-inline: auto;

  @media (max-width: 600px) {
    margin-right: 33%;
  }

  @media (max-width: 400px) {
    margin-right: 23%;
  }
}

#grade-range-fill {
  position: absolute;
  z-index: 2;
  left: 0;
  bottom: 0;
  background-color: var(--brand);
  height: 100%;
  transition: height 0.3s ease;
}

#scholarship-percentage,
#scholarship-estimated-value {
  font-size: var(--fs-xxxxl);
  font-weight: 700;
  color: var(--brand);
  font-family: var(--ff-header);
}

.next-steps,
.scholarship-info {
  max-width: 60rem;

  p {
    font-weight: 600;
  }

  &__list {
    display: flex;
    flex-direction: column;
    gap: var(--sp-xl);
  }
}

